jilles      2006/07/03 22:40:19 UTC	(20060703-5696)
  Log:
  operserv modrestart:
  - tweak notice/wallops on failure
  - fix counts shown on success
  

  Changes:	Modified:
  +9 -6		trunk/modules/operserv/modrestart.c (File Modified) 


jilles      2006/07/03 22:21:20 UTC	(20060703-5694)
  Log:
  Don't send wallops about every module loaded on a module restart.
  

  Changes:	Modified:
  +1 -1		trunk/src/module.c (File Modified) 


jilles      2006/07/03 17:01:33 UTC	(20060703-5690)
  Log:
  Make chanserv join channels on modrestart
  

  Changes:	Modified:
  +5 -7		trunk/modules/chanserv/main.c (File Modified) 


jilles      2006/07/03 16:56:43 UTC	(20060703-5688)
  Log:
  operserv modrestart: make this work somewhat. still causes wallops floods.
  

  Changes:	Modified:
  +41 -27	trunk/modules/operserv/modrestart.c (File Modified) 


jilles      2006/07/03 16:25:03 UTC	(20060703-5686)
  Log:
  Use MODULE_USE_SYMBOL everywhere.
  This commit brought to you by:
  sed -i.bak 's/\([^[:space:]]*\) = module_locate_symbol(\(".*"\), \(".*"\));/MODULE_USE_SYMBOL(\1, \2, \3);/'
  and manual editing to put them first everywhere.
  

  Changes:	Modified:
  +2 -2		trunk/contrib/cs_count.c (File Modified) 
  +2 -2		trunk/contrib/cs_ping.c (File Modified) 
  +1 -1		trunk/contrib/fc_dice.c (File Modified) 
  +3 -2		trunk/contrib/ns_enforce.c (File Modified) 
  +3 -2		trunk/contrib/ns_generatepass.c (File Modified) 
  +1 -1		trunk/contrib/os_pingspam.c (File Modified) 
  +3 -2		trunk/contrib/us_generatepass.c (File Modified) 
  +3 -3		trunk/modules/chanserv/akick.c (File Modified) 
  +3 -3		trunk/modules/chanserv/ban.c (File Modified) 
  +2 -2		trunk/modules/chanserv/clear.c (File Modified) 
  +2 -2		trunk/modules/chanserv/clear_bans.c (File Modified) 
  +3 -3		trunk/modules/chanserv/clear_users.c (File Modified) 
  +2 -2		trunk/modules/chanserv/close.c (File Modified) 
  +2 -2		trunk/modules/chanserv/drop.c (File Modified) 