@@ -1,3 +1,12 @@
+jilles      2006/07/03 22:48:14 UTC	(20060703-5698)
+  Log:
+  Update modrestart help file.
+  
+
+  Changes:	Modified:
+  +4 -3		trunk/help/oservice/modrestart (File Modified) 
+
+
 jilles      2006/07/03 22:40:19 UTC	(20060703-5696)
   Log:
   operserv modrestart:
